# Path-Tracer

./: .gitignore  .travis.yml  .travis.yml.txt  CMakeLists.txt  LICENSE.txt
src/: CMakeLists.txt  CMakeSourceGroups.txt  main.cpp
src/brdfs/: lambertian.hpp
src/cameras/: pinhole_camera.cpp  pinhole_camera.hpp
src/core/: intersection_info.hpp  material.hpp  object.hpp  physics.hpp  scene.cpp  scene.hpp
src/films/: component_buffer_film.hpp
src/graphics/: color.hpp
src/lights/: point_light.hpp
src/math/: coordinate_system.hpp  degrees.hpp  geometry.h  monte_carlo_integrator.hpp  point3d.hpp  radians.hpp  ray3d.hpp  trigonometry.hpp  utility.hpp  vector3d.hpp
src/renderers/: normal_renderer.hpp  path_tracer.hpp  raycaster.hpp  raytracer.hpp
src/shapes/: intersection_info.hpp  plane.cpp  plane.hpp  quadrilateral.cpp  quadrilateral.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
tests/: CMakeLists.txt  catch.hpp  tests_cameras_pinhole_camera.cpp  tests_core_intersection_info.cpp  tests_core_object.cpp  tests_core_physics.cpp  tests_core_scene.cpp  tests_lights_point_light.cpp  tests_main.cpp  tests_math_coordinate_system.cpp  tests_math_monte_carlo_integrator.cpp  tests_math_point3d.cpp  tests_math_trigonometry.cpp  tests_math_utility.cpp  tests_math_vector3d.cpp  tests_shapes_sphere.cpp  tests_shapes_triangle.cpp
